# inHouse

./: .example.env  .example.env.localdev  .gitignore  Cargo.toml  Dockerfile  README.md  bun.lockb  package.json  tailwind.config.js  tsconfig.json
.github/workflows/: rust.yml
assets/pwa/: manifest.json
docs/in_house/: Descripción.md  Funcionalidades.md
docs/in_house/.obsidian/: workspace.json
entity/: Cargo.toml
entity/src/: compras.rs  lib.rs  producto.rs  productos.rs  recibo.rs  recibos.rs  user_metadata.rs  user_recibo.rs  user_vivienda.rs  users.rs  usuario.rs  vivienda.rs  vivienda_producto.rs  viviendas.rs
i18n/: Cargo.toml
i18n/src/: lib.rs  translations.yaml
locales/: login.yaml  login.yml  translations.yaml
migration/: Cargo.toml  database.surql  init.surql
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220101_000001_create_table_user.rs  m20231119_171150_create_table.rs  m20231226_183754_create_table.rs  m20231226_183754_create_table_vivienda.rs  m20240114_163635_create_table_recibo.rs  m20240114_170806_create_table_compras.rs  main.rs
repository/: Cargo.toml
repository/src/: auth.rs  lib.rs  viviendas.rs
service/: Cargo.toml
service/src/: lib.rs
src/: index.tsx  main.rs
src/api/: home.rs  mod.rs
src/api/assets/: mod.rs
src/api/auth/: login.rs  mod.rs  recover_account.rs  signout.rs  signup.rs
src/api/dashboard/: chats.rs  groceries.rs  home.rs  members.rs  mod.rs  payments.rs  summary.rs  user_settings.rs
src/api/generic/: internal_error.rs  mod.rs  not_found.rs  terms_and_conditions.rs
src/api/layer/: mod.rs
src/application/: controller.ts
src/application/services/: authService.ts  homeService.ts
src/application/services/auth/signin/: SignIn.tsx
src/application/services/dashboard/: Dashboard.tsx
src/application/services/home/: Home.tsx
src/assets/: htmx.min.js  htmx.morph.min.js  style.css
src/assets/compressed/: alpine.min.js.br  alpine.min.js.zst  alpine.morph.min.js.br  alpine.morph.min.js.zst  alpine.persist.min.js.br  alpine.persist.min.js.zst  htmx.min.js.br  htmx.min.js.zst  htmx.morph.min.js.br  htmx.morph.min.js.zst
src/assets/pwa/: manifest.json  sw.js
src/component/: BaseHtml.tsx
src/components/: mod.rs  sign_up_message.rs
src/components/auth/: login_failed_message.rs  mod.rs  sign_up_message.rs
src/database/: mod.rs
src/domain/: mod.rs
src/domain/entities/: user.rs  user_metadata.rs
src/domain/entity/: user_metadata.rs
src/domain/repository/: mod.rs
src/layer/: mod.rs
src/localization/: mod.rs
src/middleware/: mainHtml.ts
src/pages/: Dashboard.tsx  Home.tsx  SignIn.tsx  SignUp.tsx  home.rs  login.rs  mod.rs  not_found.rs  product.rs  signup.rs
src/pages/assets/: mod.rs
src/pages/auth/: login.rs  mod.rs  recover_account.rs  signup.rs
src/pages/dashboard/: dashboard.rs  groceries.rs  home.rs  mod.rs  user_settings.rs
src/pages/generic/: mod.rs  not_found.rs  terms_and_conditions.rs
src/services/: auth.rs
supabase/: config.toml
templates/: base.html  home.html  index.html  login.html  message_fail.html  message_success.html  not_found.html  products.html  recover_account.html  signup.html
templates/auth/login/: login.html  login_failed_message.html  recover_account.html
templates/auth/signup/: signup.html  signup_fail.html  signup_server_error.html  signup_success.html
templates/dashboard/: base_dashboard.html  dashboard_layout.html  index.html  settings.html
templates/dashboard/chats/: index.html
templates/dashboard/groceries/: index.html
templates/dashboard/members/: index.html
templates/dashboard/payments/: index.html
templates/dashboard/summary/: index.html
templates/generic/: internal_error.html  not_found.html  terms_and_conditions.html
