[package]
name = "in_house"
version = "0.1.0"
edition = "2021"
include = ["src/**/*", "locales"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
axum = "0.6.20"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full"] }
toml = "0.8.4"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tower-http = { version = "0.4.4", features = ["trace"] }
sea-orm = { version = "0.12.4", features = [
    "runtime-tokio-rustls", # `ASYNC_RUNTIME` feature
    "sqlx-postgres",        # `DATABASE_DRIVER` feature
    "macros",
    "with-uuid",
    "with-time",
] }
log = "0.4.20"
dotenv = "0.15.0"
walkdir = "2.4.0"
serde_yaml = "0.9.25"
reqwest = { version = "0.11.22", features = ["json"] }
serde_json = "1.0.107"

[package.metadata]
name = "InHouse"
