[package]
name = "in_house"
version = "0.1.0"
edition = "2021"
include = ["src/**/*"]

[workspace]
members = [".", "entity", "migration", "service", "i18n", "repository"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
service = { path = "service" }
i18n = { path = "i18n" }
repository = { path = "repository" }
askama = "0.12.1"
axum = "0.7.4"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full", "macros", "rt-multi-thread"] }
toml = "0.8.10"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-http = { version = "0.5.2", features = ["trace", "fs"] }
dotenv = "0.15.0"
serde_yaml = "0.9.32"
serde_json = "1.0.114"
reqwest = { version = "0.11.22", features = ["json"] }
chrono = "0.4.35"
cached = { version = "0.49.2", features = ["tokio", "async"] }
tokio-util = { version = "0.7.10", features = ["io"] }
jsonwebtoken = "9.2.0"
surrealdb = "1.2.2"

[package.metadata]
name = "InHouse"
