[package]
name = "i18n"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "i18n"
path = "src/lib.rs"

[dependencies]
axum = "0.7.3"
sea-orm = { version = "0.12" }
serde = { version = "1", features = ["derive"] }
chrono = "0.4.31"
walkdir = "2.4.0"
serde_yaml = "0.9.25"
serde_json = "1.0.107"
