[package]
name = "i18n"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "i18n"
path = "src/lib.rs"

[dependencies]
axum = "0.7.4"
sea-orm = { version = "0.12.14" }
serde = { version = "1.0.197", features = ["derive"] }
chrono = "0.4.35"
walkdir = "2.5.0"
serde_yaml = "0.9.32"
serde_json = "1.0.114"
