[package]
name = "repository"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "repository"
path = "src/lib.rs"

[dependencies]
entity = { path = "../entity" }
service = { path = "../service" }
migration = { path = "../migration" }
sea-orm = { version = "0.12" }
serde = { version = "1", features = ["derive"] }
chrono = "0.4.31"
tracing = "0.1.37"
log = "0.4.20"
cached = { version = "0.47.0", features = ["tokio", "async"] }
