[package]
name = "repository"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "repository"
path = "src/lib.rs"

[dependencies]
entity = { path = "../entity" }
service = { path = "../service" }
migration = { path = "../migration" }
serde = { version = "1", features = ["derive"] }
chrono = "0.4.31"
tracing = "0.1.37"
log = "0.4.20"
surrealdb = "1.1.1"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
