[package]
name = "repository"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "repository"
path = "src/lib.rs"

[dependencies]
entity = { path = "../entity" }
service = { path = "../service" }
migration = { path = "../migration" }
serde = { version = "1.0.197", features = ["derive"] }
chrono = "0.4.35"
tracing = "0.1.40"
log = "0.4.21"
surrealdb = "1.2.2"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
