[package]
name = "service"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "service"
path = "src/lib.rs"

[dependencies]
axum = "0.7.3"
sea-orm = { version = "0.12" }
i18n = { path = "../i18n" }
serde = { version = "1", features = ["derive"] }
chrono = "0.4.31"
jsonwebtoken = "9.1.0"
reqwest = { version = "0.11.22", features = ["json"] }
tracing = "0.1.37"
regex = "1.10.2"
