[package]
name = "service"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "service"
path = "src/lib.rs"

[dependencies]
axum = "0.7.4"
i18n = { path = "../i18n" }
serde = { version = "1.0.197", features = ["derive"] }
chrono = { version = "0.4.35", features = ["serde"] }
jsonwebtoken = "9.2.0"
reqwest = { version = "0.11.25", features = ["json"] }
tracing = "0.1.40"
regex = "1.10.3"
surrealdb = "1.2.2"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
